--- a/dashboard/analytics.html
+++ b/dashboard/analytics.html
@@ -488,6 +488,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="../ai.html" class="sidebarclorlink">
+                        <span class="nav-icon">📊</span>
+                        <span>Speak to AI</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="lessonplan.html" class="sidebarclorlink">
                         <span class="nav-icon">🎓</span>
                         <span>Lesson Plans</span>
