--- a/dashboard.html
+++ b/dashboard.html
@@ -578,6 +578,12 @@
                     <span>Dashboard</span>
                 </li>
                 <li class="nav-item">
+                    <a href="ai.html" class="sidebarclorlink">
+                        <span class="nav-icon">📊</span>
+                        <span>Speak to AI</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="dashboard/lessonplan.html" class="sidebarclorlink">
                         <span class="nav-icon">🎓</span>
                         <span>Lesson Plans</span>
